# fastset

./: .envrc  .gitignore  README.md  pyproject.toml
backend/: README.md  pyproject.toml
docs/: erd.md
frontend/: pyproject.toml
