[project]
name = "fastset"
version = "0.1.0"
description = "FastSet BI Platform with frontend and backend workspaces"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []



[tool.uv.sources]
fastset-backend = { workspace = true }
fastset-frontend = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/seeds"]