[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastset-backend"
version = "0.1.0"
description = "FastSet BI Platform Backend"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastset_backend"]

[tool.hatch.build.targets.wheel.shared-data]
"dist" = "fastset_backend/dist"

[tool.hatch.build]
directory = "dist"