[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastset-frontend"
version = "0.1.0"
description = "FastSet BI Platform Frontend"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastset_frontend"]

[tool.hatch.build.targets.wheel.shared-data]
"dist" = "fastset_frontend/dist"

[tool.hatch.build]
directory = "dist"